--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:all": "concurrently \"bun run dev:webhook\" \"bun run dev\" ",
+    "dev:webhook": "ngrok http --url=doloris-weakish-brittaney.ngrok-free.dev 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -39,9 +41,17 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "5.65.1",
+    "@trpc/client": "11.0.0-rc.730",
+    "@trpc/react-query": "11.0.0-rc.730",
+    "@trpc/server": "11.0.0-rc.730",
+    "@upstash/ratelimit": "2.0.5",
+    "@upstash/redis": "1.34.3",
     "class-variance-authority": "^0.7.1",
+    "client-only": "^0.0.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "concurrently": "9.1.2",
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
@@ -53,14 +63,18 @@
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
+    "react-error-boundary": "5.0.0",
     "react-hook-form": "^7.71.1",
     "react-resizable-panels": "^4.5.1",
     "recharts": "^2.15.4",
+    "server-only": "^0.0.1",
     "sonner": "^2.0.7",
+    "superjson": "2.2.2",
+    "svix": "1.45.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.3.6"
+    "zod": "3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
