--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "6.10.3",
-    "@hookform/resolvers": "^5.2.2",
+    "@hookform/resolvers": "3.9.1",
     "@mux/mux-node": "9.0.1",
     "@mux/mux-uploader-react": "1.1.1",
     "@neondatabase/serverless": "0.10.4",
@@ -57,6 +57,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "16.4.7",
     "drizzle-orm": "0.39.0",
+    "drizzle-zod": "0.7.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.563.0",
